--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -250,6 +250,12 @@
   top: 0;
   color: white;
   border-radius: 4px;
+  transition: transform 0.3s ease;
+}
+
+.social__item:hover {
+  transform: translateY(-3px);
+  opacity: 0.9;
 }
 
 .social__item span {
