--- a/assets/css/movie-description.css
+++ b/assets/css/movie-description.css
@@ -50,29 +50,82 @@
   color: #fff;
 }
 
-.header__right {
+.header__menu--item:hover .header__menu--link {
+  color: var(--button-color);
+}
+
+.navbar__typelist {
+  display: none;
+  position: absolute;
+  top: 60px;
+  left: 0px;
+  width: 700px;
+  background: #fff;
+  z-index: 10;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  text-align: left;
+  list-style: none;
+  overflow: hidden;
+  margin-left: -1%;
+  margin-right: -1%;
+  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.05) !important;
+}
+
+.navbar__typelist--item {
+  width: 23%;
+  float: left;
+  margin: 0 1%;
+}
+
+.navbar__typelist--link {
+  text-decoration: none;
+  height: 30px;
+  color: #ccc;
+  line-height: 30px;
+  padding: 0 10px;
+  display: block;
+  font-size: 15px;
+  white-space: nowrap;
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-transform: none;
+}
+
+.navbar__typelist--link:hover {
+  background-color: var(--button-color);
+}
+
+.header__menu--item:hover .navbar__typelist {
+  display: block;
+}
+
+.navbar__genre,
+.navbar__country {
   display: flex;
+  position: relative;
+  height: 65px;
+  align-items: center;
 }
 
 .header__right {
+  display: flex;
   position: relative;
-  width: 200px;
 }
 
 .header__right--search {
   display: flex;
+  width: 200px;
   height: 38px;
-  padding-left: 40px;
+  padding-right: 40px;
   align-items: center;
-  position: relative;
-  justify-content: center;
   background: #fff;
   border-radius: 30px;
 }
 
-.header__right--icon {
-  width: 40px;
-  height: 38px;
+.header__right--search-icon {
+  padding: 0 13px;
   line-height: 38px;
   color: #111;
   font-size: 14px;
@@ -80,11 +133,12 @@
 }
 
 .header__right--input {
+  width: 150px;
   color: #111;
   font-size: 14px;
   font-weight: 300;
   border: none;
-  box-shadow: none !important;
+  outline: none;
 }
 
 .header__right--login {
